feat(slides): Add OSHF presentation
Adds presentation slides for Open Neuromorphic OSHF proposal.
Includes images, HTML structure and basic styling.

--- a/static/slides/2508_ohf/index.html
+++ b/static/slides/2508_ohf/index.html
@@ -78,15 +78,15 @@
             padding-bottom: 15px;
         }
 
-        /* New styles for list items */
+        /* Adjusted styles for list items */
         .reveal .slides ul li {
-            margin-bottom: 1.1em; /* Increased spacing */
+            margin-bottom: 0.9em; /* Adjusted spacing to prevent clipping */
         }
 
         .reveal .slides ul li strong {
             color: var(--color-accent-new); /* Added color to bolded text */
         }
-        /* End of new styles */
+        /* End of adjusted styles */
 
         .energy-comparison {
             display: flex;
