feat(slides): Update LinkedIn follower stats

--- a/static/slides/2508_ohf/index.html
+++ b/static/slides/2508_ohf/index.html
@@ -372,7 +372,7 @@
                     <div class="stat-number">2,239</div>
                     <h4>LinkedIn Followers</h4>
                     <p style="color: rgba(255, 255, 255, 0.8)">
-                        23% Engineering, 18% Research, 15% Education
+                        21% Higher Ed, 15% Research, 10% Semiconductor Manufacturing
                     </p>
                 </div>
                 <div class="stat-card">
