--- a/static/slides/2510_dtu_act/index.html
+++ b/static/slides/2510_dtu_act/index.html
@@ -536,7 +536,7 @@
                         Neuromorphic computing through mixed-signal systems
                     </h2>
                     <strong>Jens Egholm Pedersen</strong><br />
-                    Postdoc, jegpe@dtu.dk
+                    Postdoc, jegpe@dtu.dk, jepedersen.dk
                 </section>
             </section>
         </div>
